--- a/src/css/index.css
+++ b/src/css/index.css
@@ -19,6 +19,6 @@ footer {
 
 .bg-primary,
 .btn-primary {
-  background-color: #377bb5 !important;
+  background-color: #85bdee !important;
   border: inherit;
 }
