onClick toggle Menu

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -56,7 +56,7 @@ padding: 1px 5px 4px 5px  ;
 
 .dropdown-item.active,
 .dropdown-item:active {
-  background-color: #a9aeb2;
+  background-color: #85bdee;
 }
 
 
