--- a/src/css/App.css
+++ b/src/css/App.css
@@ -4,8 +4,8 @@
 
 .pet-delete{
 
-margin: 5px ;
-padding: 1px 5px 4px 5px  ;
+margin:0  10px ;
+padding: 0 3px 2px 3px  ;
 
 
 }
@@ -60,4 +60,9 @@ padding: 1px 5px 4px 5px  ;
   background-color: #85bdee;
 }
 
+.kdnr{
+   margin-left: 50px;
+   padding: 0 10px;
+   background-color: #cedfee;
+}
 
